R4 UI: Time bar, scrollbar fixes

--- a/static/style4/_sass.scss
+++ b/static/style4/_sass.scss
@@ -1,7 +1,7 @@
 $img_dir: ../../images;
 
 $background: #000000;
-$text: rgb(240, 240, 240);
+$text: #FFF;
 $darktext: #CCCCCC;
 $vdarktext: #777777;
 $vvdarktext: #444444;
@@ -43,6 +43,7 @@ html, body {
     color: $text;
     margin: 0;
     padding: 0; 
+    font-family: Helvetica, sans-serif;
 }
 
 #sizable_body {
