--- a/static/style4/timeline.css
+++ b/static/style4/timeline.css
@@ -11,7 +11,7 @@
 .timeline_event {
 	opacity: 0;
 	position: absolute;
-	width: 100%;
+	width: 99%;
 	@include transform(translateY(-160px));
 	@include transition(height, opacity, transform);
 }
@@ -54,9 +54,13 @@
 }
 
 .timeline_progress_bar_outside {
+	position: absolute;
 	background-color: $vvdarktext;
 	height: 2px;
 	padding: 0px;
+	margin: 0px;
+	width: 95%;
+	@include transform(translateY(-25px));
 }
 
 .timeline_progress_bar_inside {
@@ -64,4 +68,5 @@
 	height: 2px;
 	margin: 0px;
 	padding: 0px;
+	width: 0px;
 }
